--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+/* Global */
+
 :root {
     --white: #FFFFFF;
-    --black: #212121;
+    --black: #000000;
     --accent: #4CAF50;
     --link: #0277BD;
     --link-hover: #01579B;
@@ -14,6 +16,8 @@ body {
     font-weight: 400;
     font-size: 1rem;
 }
+
+/* Header */
 
 header {
     margin: 25px 10vw;
@@ -35,20 +39,21 @@ nav {
 nav a {
     margin-left: 50px;
     position: relative;
-    font-weight: 600;
+    font-weight: 400; /*Or 600?*/
     text-decoration: none;
-    font-size: 1.1em;
+    font-size: 1.25em;
 }
 
 nav a::after {
     content: "";
     position: absolute;
     width: 100%;
-    height: 5px;
-    bottom: -5px;
+    height: 3px;
+    bottom: -3px;
     left: 0;
     background-color: var(--accent);
     transform: scaleX(0);
+    transform-origin: left bottom; /*Not sure if I want to keep this*/
     transition: transform 500ms;
 }
 
@@ -64,6 +69,8 @@ nav a:hover::after {
     transform: scaleX(1);
 }
 
+/* Splash */
+
 .splash {
     width: 100vw;
     height: calc(80vh - 90px);
@@ -75,5 +82,29 @@ nav a:hover::after {
     height: 100%;
     position: absolute;
     object-fit: cover;
-    z-index: 0;
+    z-index: -1;
+}
+
+.splash div {
+    width: 20vw;
+    height: calc(100% - 100px);
+    position: absolute;
+    left: 0;
+    padding: 50px 10vw;
+    z-index: 1;
+    background-color: rgba(250, 250, 250, 0.65);
+    color: var(--black);
+    font-size: 2.75em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.fancy {
+    font-weight: 600;
+    background-color: var(--accent);
+    color: var(--white);
+    padding: 0 5px;
 }
