--- a/style.css
+++ b/style.css
@@ -22,13 +22,26 @@ body {
     font-size: 1rem;
 }
 
+h1 {
+    font-family: "Apricots", "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: 3em;
+    color: var(--accent);
+    margin: 0;
+}
+
 /* Header */
 
 header {
-    margin: 25px 10vw;
+    background-color: var(--white);
+    padding: 25px 10vw;
     height: 50px;
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    z-index: 2;
 }
 
 header img {
@@ -77,7 +90,7 @@ nav a:hover::after {
 /* Splash */
 
 .splash {
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - 100px);
     position: relative;
 }
@@ -113,4 +126,43 @@ nav a:hover::after {
     font-size: 2em;
     line-height: 100%;
     color: var(--accent);
+}
+
+/* Sections */
+
+.section {
+    margin: 50px 10vw;
+}
+
+/* About */
+
+#about {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+}
+
+.headshot-container {
+    height: 250px;
+    width: 250px;
+    margin-right: 25px;
+    padding-top: 17px;
+    position: relative;
+}
+
+.headshot-container img {
+    width: 100%;
+}
+
+.headshot-container img:first-of-type {
+    height: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.headshot-container img:last-of-type {
+    border-radius: 0 0 48% 48%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
