Animate splash text

--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ nav a:hover::after {
 }
 
 .splash div {
+    min-width: max-content;
     width: calc(40% - 200px);
     height: calc(100% - 200px);
     position: absolute;
@@ -117,7 +118,8 @@ nav a:hover::after {
     z-index: 1;
     background-color: rgba(250, 250, 250, 0.75);
     color: var(--black);
-    font-size: 3em;
+    font-size: 2.75em;
+    line-height: 1.5em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -125,11 +127,19 @@ nav a:hover::after {
     text-align: center;
 }
 
-#splash-text {
+.splash span {
     font-family: "Apricots", "Open Sans", sans-serif;
     font-size: 2em;
-    line-height: 100%;
     color: var(--accent);
+    transform-origin: center;
+    transition: transform 500ms, opacity 500ms;
+}
+
+#splash-text2, #splash-text3 {
+    position: absolute;
+    bottom: calc(50% - 0.75em);
+    transform: scale(0);
+    opacity: 0;
 }
 
 #splash-video2, #splash-video3 {
@@ -177,14 +187,17 @@ nav a:hover::after {
 /* Pull quote */
 
 #quote {
-    height: 50vh;
-    background-image: url(./assets/AdobeStock_362353271.jpeg);
-    background-size: cover;
-    background-position: center;
+    text-align: center;
+    background-color: var(--lightgrey);
+    font-size: 2.5em;
+}
+
+#quote span {
+    font-family: "Apricots", "Open Sans", sans-serif;
+    font-size: 1.5em;
+    font-weight: 400;
+    color: var(--accent);
+    margin: 0;
 }
 
 /* Services */
-
-#services {
-    background-color: var(--lightgrey);
-}
