Add page anchor links

--- a/style.css
+++ b/style.css
@@ -189,12 +189,14 @@ nav a:hover::after {
     display: grid;
     grid-template-columns: 1fr auto;
     align-items: center;
+    scroll-margin-top: 100px;
 }
 
 #about, #contact {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
+    scroll-margin-top: 100px;
 }
 
 /* Pull quotes */
