--- a/style.css
+++ b/style.css
@@ -147,6 +147,26 @@ nav a:hover::after {
     display: none;
 }
 
+/* Sections */
+
+.section {
+    padding: 75px 20vw;
+}
+
+#services {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    scroll-margin-top: 100px;
+}
+
+#about, #contact {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    scroll-margin-top: 100px;
+}
+
 /* Images */
 
 .headshot-container {
@@ -177,26 +197,6 @@ nav a:hover::after {
     position: absolute;
     bottom: 0;
     left: 0;
-}
-
-/* Sections */
-
-.section {
-    padding: 75px 15vw;
-}
-
-#services {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    align-items: center;
-    scroll-margin-top: 100px;
-}
-
-#about, #contact {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    align-items: center;
-    scroll-margin-top: 100px;
 }
 
 /* Pull quotes */
@@ -261,4 +261,81 @@ footer {
     color: var(--white);
     font-size: 0.9em;
     text-align: center;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 1200px) {
+
+    .section {
+        padding: 75px 10vw;
+    }
+
+    header {
+        padding: 25px 10vw;
+    }
+
+    nav a {
+        margin-left: 50px;
+    }
+}
+
+
+@media screen and (max-width: 800px) {
+
+    .section, header {
+        padding: 25px;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: center;
+        height: max-content;
+        width: calc(100vw - 50px);
+    }
+
+    header img {
+        max-width: calc(100vw - 50px);
+    }
+
+    nav a {
+        font-size: 1em;
+        width: max-content;
+        margin: 25px 25px 0 0;
+    }
+
+    nav a:last-of-type {
+        margin: 25px 0 0 0;
+    }
+
+    .splash {
+        height: 75vh;
+    }
+
+    .splash div {
+        height: calc(100% - 50px);
+        min-height: min-content;
+        width: calc(100vw - 50px);
+        padding: 25px;
+        left: 0;
+        bottom: 0;
+        font-size: 2em;
+    }
+
+    .quote {
+        font-size: 1.5em;
+    }
+
+    #services, #about, #contact {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+    }
+    
+    .headshot-container, .headshot-container:nth-child(2) {
+        margin: 0;
+        padding: 0;
+        transform: scale(0.75);
+        justify-self: center;
+        grid-area: 3 / 1 / 4 / 2;
+    }
 }
